# ERP

./: .gitignore  ERP.sln  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_invoices.py
docs/: COMO_EXECUTAR.md  REQUISITOS_ERP_DESKTOP_OFFLINE.md
scripts/: abrir_erp.vbs  create-db.ps1  create-db.sh  iniciar_erp.bat  migrate.ps1  migrate.sh  restore.ps1  restore.sh  run.ps1  run.sh  run_app.bat  run_app.ps1  run_migrations.ps1  run_migrations.sh  setup_venv.bat  setup_venv.ps1  setup_venv.sh
src/Erp.Application/: Erp.Application.csproj
src/Erp.Application/Abstractions/: IAuthService.cs  IPasswordHasher.cs  IProductRepository.cs  IProductService.cs  IUnitOfWork.cs  IUserRepository.cs
src/Erp.Application/Common/: PagedResult.cs
src/Erp.Application/DTOs/: LoginResultDto.cs  ProductDto.cs
src/Erp.Application/Services/: AuthService.cs  ProductService.cs
src/Erp.Domain/: Erp.Domain.csproj
src/Erp.Domain/Entities/: BaseEntity.cs  Product.cs  User.cs
src/Erp.Domain/Enums/: UserRole.cs
src/Erp.Infrastructure/: DependencyInjection.cs  Erp.Infrastructure.csproj
src/Erp.Infrastructure/Auth/: PasswordHasher.cs
src/Erp.Infrastructure/Data/: ErpDbContext.cs  ProductRepository.cs  UnitOfWork.cs  UserRepository.cs
src/Erp.Infrastructure/Migrations/: 202408180001_InitialCreate.cs  ErpDbContextModelSnapshot.cs
src/Erp.UI/: App.xaml  App.xaml.cs  Erp.UI.csproj
src/Erp.UI/Commands/: RelayCommand.cs
src/Erp.UI/ViewModels/: LoginViewModel.cs  MainViewModel.cs  ViewModelBase.cs
src/app/: config.py  main.py
(+14 files in other folders)
